Drop-down text not visible in workspace-left-sidebar issue resolved

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -141,7 +141,6 @@ body {
 }
 
 #workspace-left-sidebar #username-container .dropdown-menu a:link {
-  color: #fff;
   text-decoration: none;
 }
 
